# fuzzed-ethereum-rs

./: Cargo.toml  README.md  magic.dict
ethfuzz/: Cargo.toml
ethfuzz/output/ethfuzz/coverage/: coverage.json  index.html
ethfuzz/output/ethfuzz/plot/: index.html  index.html.orig
ethfuzz/output/ethfuzz/shared_corpus/: id:000001,time:0,execs:0,orig:id:000059,src:000000+000031,time:775359,execs:319284,op:splice,rep:16,+cov  id:000004,time:0,execs:0,orig:id:000056,src:000000+000031,time:775328,execs:319208,op:splice,rep:64  id:000008,time:0,execs:0,orig:id:000084,src:000021+000022,time:787539,execs:31043,op:splice,rep:4  id:000009,src:000000+000001,time:774315,execs:316348,op:splice,rep:2  id:000009,time:0,execs:0,orig:id:000083,src:000002,time:785698,execs:26138,op:havoc,rep:4  id:000012,src:000000+000001,time:774325,execs:316377,op:splice,rep:16  id:000012,time:0,execs:0,orig:id:000080,src:000071,time:781464,execs:16351,op:havoc,rep:8  id:000013,src:000000+000001,time:774328,execs:316383,op:splice,rep:16  id:000014,src:000000+000001,time:774331,execs:316390,op:splice,rep:64  id:000015,src:000000+000001,time:774336,execs:316401,op:splice,rep:32,+cov  id:000018,src:000000+000001,time:774347,execs:316429,op:splice,rep:16  id:000019,src:000000+000001,time:774351,execs:316440,op:splice,rep:64  id:000019,time:0,execs:0,orig:id:000041,src:000000+000009,time:774672,execs:317398,op:splice,rep:64  id:000020,src:000000+000001,time:774358,execs:316461,op:splice,rep:64  id:000023,src:000000+000001,time:774385,execs:316539,op:splice,rep:16  (+105 more)
ethfuzz/src/: main.rs
(+227 files in other folders)
